--- a/style.css
+++ b/style.css
@@ -27,3 +27,8 @@ body.night {
 p.night,h1.night {
     color: whitesmoke;
 }
+
+button.night {
+  background-color: rgb(56, 51, 51); /* Dunkle Hintergrundfarbe des Buttons im Nachmodus */
+  color: #ffffff; /* Textfarbe des Buttons im Nachmodus */
+}
