--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ button {
     width: 200px;
     height: 50px;
     margin-top: 20px;
+    background-color: rgb(192, 192, 192);
+    color: black;
 }
 
 /** Day-Modus */
@@ -29,6 +31,6 @@ p.night,h1.night {
 }
 
 button.night {
-  background-color: rgb(56, 51, 51); /* Dunkle Hintergrundfarbe des Buttons im Nachmodus */
-  color: #ffffff; /* Textfarbe des Buttons im Nachmodus */
+  background-color: rgb(64, 64, 64); /* Dunkle Hintergrundfarbe des Buttons im Nachtmodus */
+  color: whitesmoke; /* Textfarbe des Buttons im Nachtmodus */
 }
